# nsf6

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  db_export.py  docker-compose.yaml  package-lock.json  package.json  postgre-only-docker-compose.yaml
import_test/: debug-req.py  import.py  points_export_20250913_235143.txt  req-test.py
ml/: lstm_autoencoder.ipynb  lstm_autoencoder.py  requirements.txt  server.py
ml/models/: route_autoencoder_FULL_model.keras  route_scaler_FULL_for_anomaly.pkl  route_threshold_FULL.txt
src/: image_compressor.rs  main.rs  templates.rs
src/api/: anomalies.rs  heatmap.rs  mod.rs  points.rs  traficmap.rs  velocitymap.rs  zaglushka.rs
src/database/: mod.rs
src/database/model/: points.rs
src/migration/: m20250913_000001_create_points.rs  mod.rs
src/routes/: index.rs  map.rs  mod.rs  not_found.rs  paint.rs
web/src/static/css/: in.css
web/src/static/css/styles/base/: colors.css
web/src/static/css/styles/components/: timeSlider.css
web/src/templates/: 404.html  base.html  index.html  map.html  paint.html
web/src/ts/: hello-world.ts  index.ts  paint.ts
web/src/ts/2gis/: DG.ts  get.ts  heatmap.ts
web/src/ts/api/: heatmap.ts  sendPoints.ts
web/src/ts/components/: timeSlider.ts
web/src/ts/helpers/: adjustableUpdater.ts  astanaMap.ts
web/src/ts/types/: common.ts  heatmap.ts
