[package]
name = "indrive"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-files = "^0.6.7"
actix-cors = "0.7.0"
minijinja = {version = "2.11", features = ["loader"]}
minijinja-autoreload = { version = "2.11", features = ["watch-fs"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
image = { version = "^0.25.6", features = ["webp", "jpeg", "png"] }
webp = "^0.3.1"
dashmap = "^6.1.0"
sea-orm = { version = "1.1.14", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "with-json" ] }
sea-orm-migration = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
dotenvy = { version = "0.15", default-features = false }
log = "0.4"
env_logger = "0.11"